fix notify position on mobile devices

--- a/frontend-app/src/index.css
+++ b/frontend-app/src/index.css
@@ -449,6 +449,9 @@ label {
     .modal-feedback__text{
         font-size: 18px;
     }
+    .notification-container-top-right{
+        top: 100px!important;
+    }
 }
 @media (max-width: 440px) {
     .intro-block{
